--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,6 +43,7 @@
       <a class="nav-item nav-link active" href="{{site.baseurl}}/index.html">Home</a>
       <a class="nav-item nav-link" href="{{site.baseurl}}/syllabus.html">Syllabus</a>
       <a class="nav-item nav-link" href="{{site.baseurl}}/schedule.html">Schedule</a>
+      <a class="nav-item nav-link" href="{{site.baseurl}}/journal.html">Journal</a>
       <!-- <a class="nav-item nav-link" href="https://github.com/mbudisic/MA321-Clarkson-F19/edit/gh-pages/_layouts/default.html">Notes (students only)</a> -->
     </div>
   </div>
